# RequestStructureTemplate

./: pyproject.toml
src/data/: __init__.py
src/data/interfaces/: api_consumer_interface.py
src/data/models/: bank_collector_model.py
src/data/usecases/: bank_collector.py
src/domain/: __init__.py
src/domain/usecases/: bank_collector.py
src/errors/: __init__.py  http_request_error.py
src/infra/: api_consumer.py
src/infra/models/: api_consumer_model.py
tests/data/usecases/: bank_list_collector_test.py
tests/infra/: consumer_api_test.py
