[project]
name = "request-structure"
package-mode = false
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Felipe Santana Batista",email = "daniel.sbatista@shopee.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "requests-mock (>=1.12.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
